package modelo;

public class Automovil extends Vehiculo {
    public Automovil(String marca, String modelo, int anio, int cilindraje, double avaluo, String tipoUso) {
        super(marca, modelo, anio, cilindraje, avaluo, tipoUso);
    }
}
